tests/cmp/record-pat-dotdot-no-comma.golden
Parse Error:
tests/cmp/record-pat-dotdot-no-comma.trp:3:12: parse error
  3 |     val {a ..} = r
    |            ^
  unexpected '..'
  expected one of: ',', '}'

Suggestion: Possibly mismatched braces - check for missing '}'.

