tests/cmp/record-pat-dotdot-no-comma.trp
(* Test: missing comma before .. - should fail *)
let val r = {a = 1, b = 2, c = 3}
    val {a ..} = r
in a
end